Italian translation updates

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -441,12 +441,12 @@
     <string name="omniswitch_first_time_message">Assicurati di aver abilitato OmniSwitch. Puoi farlo attraverso \"Impostazioni\" qui sotto</string>
 
     <!-- Double Tap Navbar to Sleep -->
-    <string name="double_tap_sleep_nav_bar_title">Doppio tocco</string>
-    <string name="double_tap_sleep_nav_bar_summary">Doppio tocco sulla barra di navigazione per porre il dispositivo in sleep</string>
+    <string name="double_tap_sleep_nav_bar_title">Doppio tap</string>
+    <string name="double_tap_sleep_nav_bar_summary">Doppio tap sulla barra di navigazione per porre il dispositivo in sleep</string>
 
     <!-- Double tap to sleep on lockscreen -->
-    <string name="double_tap_sleep_anywhere_title">DT2S su Schermata di blocco</string>
-    <string name="double_tap_sleep_anywhere_summary">Doppio tocco sulla schermata di blocco per porre il dispositivo in sleep</string>
+    <string name="double_tap_sleep_anywhere_title">Doppio tap</string>
+    <string name="double_tap_sleep_anywhere_summary">Doppio tap sulla schermata di blocco per porre il dispositivo in sleep</string>
 
     <!-- PA Pie control -->
     <string name="pa_piecontrol_settings_summary">Personalizza voci, stile, dimensioni e colori del Menu a Torta (PA Pie 2.0)</string>
@@ -458,7 +458,7 @@
     <string name="pa_pie_style_title">Stile torta</string>
     <string name="pa_pie_menu_title">Mostra sempre il pulsante menu</string>
     <string name="pa_pie_menu_summary">Se il pulsante menu debba o meno essere mostrato sempre, anche quando non necessario</string>
-    <string name="pa_pie_size_title">Domensioni torta</string>
+    <string name="pa_pie_size_title">Dimensioni torta</string>
     <string name="pa_pie_size_summary">Definire la dimensione dei pulsanti della torta</string>
     <string name="pa_pie_size_small">Piccoli</string>
     <string name="pa_pie_size_default">@string/pa_pie_mode_default</string>
@@ -522,22 +522,22 @@
 
     <!-- SlimSizer  -->
     <string name="listsystem">lista</string>
-    <string name="sizer_title">Disinstallatore applicazioni</string>
+    <string name="sizer_title">Disinstalla applicazioni</string>
     <string name="caution">Cautela!</string>
-    <string name="sizer_message_startup">Questo strumento ti permette di cancellare applicazioni di sistema. Usalo con cautela e cancella solo applicazioni che sai essere sicuri rimuovere.</string>
+    <string name="sizer_message_startup">Questo strumento ti permette di eliminare applicazioni di sistema. Usalo con cautela ed elimina solo applicazioni che sai essere sicuri rimuovere.</string>
     <string name="sizer_message_delete">Sicuro tu voglia eliminare questa applicazione?</string>
-    <string name="btn_delete">Cancella le APP selezionate, ora!</string>
-    <string name="delete_progress_title">Sto cancellando</string>
+    <string name="btn_delete">Elimina le APP selezionate, ora!</string>
+    <string name="delete_progress_title">Sto eliminando</string>
     <string name="delete_progress">Sto eliminando i file sezionati...</string>
     <string name="delete_success">Eliminati</string>
-    <string name="delete_fail">Impossibile cancellare</string>
+    <string name="delete_fail">Impossibile eliminare</string>
     <string name="btn_profile">Profilo</string>
     <string name="sizer_message_sdnowrite">Impossibile scrivere sulla SD Card.</string>
     <string name="sizer_message_sdnoread">Impossibile leggere la SD Card.</string>
     <string name="sizer_message_filesuccess">Profilo creato.</string>
     <string name="sizer_message_filefail">Impossibile creare il profilo.</string>
     <string name="sizer_message_noselect">Nulla di selezionato.</string>
-    <string name="system_app_remover">Disinstallatore applicazioni di sistema</string>
+    <string name="system_app_remover">Disinstalla applicazioni di sistema</string>
 
     <!-- Three-fingers-swipe to screenshot -->
     <string name="three_finger_gesture">Gesture tre dita</string>
