Italian translation updates

--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -144,7 +144,7 @@
     <string name="status_bar_custom_header_default_summary">Abilita per immagini poligrafiche HD. Disabilita per immagini originali.</string>
 
     <!-- Carrier Label -->
-    <string name="carrier_options">Etichetta operartore</string>
+    <string name="carrier_options">Etichetta operatore</string>
     <string name="custom_carrier_label_title">Etichetta operatore personalizzata</string>
     <string name="custom_carrier_label_explain">Inserisci un\'etichetta. Lascia in bianco per tornare all\'etichetta di default.</string>
     <string name="custom_carrier_label_notset">Etichetta personalizzata non settata</string>
@@ -304,11 +304,11 @@
     <string name="weather_hide_panel_auto_title">Auto</string>
     <string name="weather_hide_panel_custom_title">Personalizzato</string>
     <string name="weather_hide_panel_never_title">Mai</string>
-    <string name="weather_hide_panel_auto_summary">Il pannello meteo sarà nascosto, quando il numero di notifiche visibili raggiungerà il massimo numero di notifiche ammesso sulla schermata di blocco</string>
-    <string name="weather_hide_panel_custom_summary">Il pannello meteo sarà nascosto,  quando il numero di notifiche visibili raggiungerà il massimo numero scelto (%s)</string>
+    <string name="weather_hide_panel_auto_summary">Il pannello meteo sarà nascosto quando il numero di notifiche visibili raggiungerà il massimo numero di notifiche ammesso sulla schermata di blocco</string>
+    <string name="weather_hide_panel_custom_summary">Il pannello meteo sarà nascosto  quando il numero di notifiche visibili raggiungerà il massimo numero scelto (%s)</string>
     <string name="weather_hide_panel_never_summary">Il pannello meteo non sarà nascosto</string>
     <string name="weather_number_of_notifications_title">Numero di notifiche</string>
-    <string name="weather_number_of_notifications_dlg_title">Scegli il numero di notifiche, oltre il quale nascondere il pannello meteo</string>
+    <string name="weather_number_of_notifications_dlg_title">Scegli il numero di notifiche oltre il quale nascondere il pannello meteo</string>
     <string name="weather_number_of_notifications_always_title">Sempre</string>
     <string name="weather_number_of_notifications_two_title">2</string>
     <string name="weather_number_of_notifications_three_title">3</string>
@@ -518,7 +518,7 @@
 
     <!-- Task Manager -->
     <string name="enable_task_manager_title">Gestore Task</string>
-    <string name="enable_task_manager_summary">Abilita/disabilita il bottone del gestore di task nell\'area della barra di stato estesa</string>
+    <string name="enable_task_manager_summary">Abilita/disabilita il bottone del gestore task nell\'area della barra di stato estesa</string>
 
     <!-- SlimSizer  -->
     <string name="listsystem">lista</string>
@@ -690,8 +690,8 @@
     <string name="recent_panel_expanded_mode_auto">Auto (default)</string>
     <string name="recent_panel_expanded_mode_always">Sempre</string>
     <string name="recent_panel_expanded_mode_never">Mai</string>
-    <string name="recent_panel_show_topmost_title">Mostra le task più usate</string>
-    <string name="recent_panel_show_topmost_summary">Non escludere le task più usate dalla visualizzazione recenti</string>
+    <string name="recent_panel_show_topmost_title">Mostra i task più usati</string>
+    <string name="recent_panel_show_topmost_summary">Non escludere i task più usati dalla visualizzazione recenti</string>
     <string name="recent_panel_bg_color_title">Colore Sfondo Pannello</string>
     <string name="recent_card_bg_color_title">Colore Sfondo Carta</string>
     <string name="recent_card_text_color_title">Colore Testo Carta</string>
@@ -771,7 +771,7 @@
 
     <!-- Lockscreen Torch -->
     <string name="keyguard_torch_title">Torcia</string>
-    <string name="keyguard_torch_summary">Premi a lungo il tasto accensione quando lo schermo è spento, per accendere la torcia</string>
+    <string name="keyguard_torch_summary">Premi a lungo il tasto accensione, quando lo schermo è spento, per accendere la torcia</string>
 
     <!-- Breathing Notifications -->
     <string name="breathing_notifications_category">Notifiche con Breathing</string>
@@ -824,8 +824,8 @@
     <string name="hide_apps_from_recents_summary">Quali applicazioni escludere dal pannello recenti</string>
 
     <!-- Current on Lockscreen -->
-    <string name="lock_screen_show_current">Tasso di ricarica</string>
-    <string name="lock_screen_show_current_summary">Mostra il tasso di ricarica sulla schermata di blocco</string>
+    <string name="lock_screen_show_current">Corrente di ricarica</string>
+    <string name="lock_screen_show_current_summary">Mostra rateo di corrente di ricarica sulla schermata di blocco</string>
 
     <!-- Floating Windows -->
     <string name="shortcut_action_floating_windows">Floating Windows</string>
