AE: Updated RU translations by Sergey Samsonenko
Change-Id: I872f44124b26635ccd5c8f2fda55e552ed93a562

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Настройки AICP </string>
-
+    <string name="app_name">AICP</string>
     <string name="navigation_drawer_open">Открыть панель навигации</string>
     <string name="navigation_drawer_close">Закрыть панель навигации</string>
 
@@ -10,7 +9,7 @@
     <string name="second_layout_title">Во-вторых компоновка</string>
     <string name="third_layout_title">В-третьих компоновка</string>
     <string name="aicp_extras_title">Расширенные настройки</string>
-    <string name="pun_title">В одном роме все настройки</string>
+    <string name="pun_title">AICP</string>
     <string name="various_shit_title">Разное</string>
     <string name="about_title">Об устройстве</string>
     <string name="other_title">Другое</string>
@@ -32,7 +31,7 @@
     <string name="systemui_tuner_dilog_warning">Настройщик предлагает ограниченные модификации SystemUI.
        Ссылка была добавлена Расширенные настройки для более легкого доступа. Здесь вы можете добавить новые плитки.</string>
     <string name="aicp_downloads_title">Скачать прошивку</string>
-    <string name="aicp_gerrit_title">Исходники</string>
+    <string name="aicp_gerrit_title">Свободное ПО</string>
     <string name="send_mail_intent">Отправить сообщение...</string>
     <string name="hidden_anim_activity_title">Время отдыха!!!</string>
     <string name="hidden_anim_more_title">Больше?</string>
@@ -105,8 +104,6 @@
     <!-- Color Picker -->
     <string name="dialog_color_picker">Изменить цвет</string>
     <string name="press_color_to_apply">Нажать на цвет, что бы принять</string>
-    <string name="arrow_right">→</string>
-    <string name="arrow_down">↓</string>
     <string name="hex">Цвет в Hex:</string>
     <string name="hex_hint">\#ff000000</string>
     <string name="set">Выбрать</string>
@@ -504,7 +501,7 @@
     <string name="listsystem">Список</string>
     <string name="sizer_title">Удаление приложений</string>
     <string name="caution">Внимание!</string>
-    <string name="sizer_message_startup">Этот инструмент позволяет удалять системные приложения . Используйте с осторожностью и только удаляйте приложения, которые вы знаете.</string>
+    <string name="sizer_message_startup">Этот инструмент позволяет удалять системные приложения. Используйте с осторожностью и только удаляйте приложения, которые вы знаете.</string>
     <string name="sizer_message_delete">Вы уверены, что хотите удалить это приложение ?</string>
     <string name="btn_delete">Удалить выбранные приложения сейчас</string>
     <string name="delete_progress_title">Удаление</string>
@@ -593,7 +590,7 @@
     <string name="power_menu_animation_fly">Свечение</string>
     <string name="power_menu_animation_card">3D</string>
     <string name="power_menu_animation_translucent_top">Просвечивание (сверху)</string>
-    <string name="power_menu_animation_translucent_bottom">Translucent (снизу)</string>
+    <string name="power_menu_animation_translucent_bottom">Просвечивание (снизу)</string>
 
     <!-- Statusbar AICP logo -->
     <string name="status_bar_logo_category_title">Лого в статус баре</string>
@@ -786,7 +783,7 @@
 
     <!-- Header image shadow -->
     <string name="status_bar_custom_header_shadow_title">Затемнение изображение заголовка</string>
-    <string name="status_bar_custom_header_shadow_summary">Для лучшей видимости на ярких изображениях</string>
+    <string name="status_bar_custom_header_shadow_summary">Для лучшей видимости</string>
     <string name="unit_percent">\u0025</string>
 
     <!-- AdAway -->
@@ -797,8 +794,8 @@
     <string name="hide_apps_from_recents_summary">Выберите, какие приложения следует исключить из панели недавних.</string>
 
     <!-- Current on Lockscreen -->
-    <string name="lock_screen_show_current">Зарядка батареи</string>
-    <string name="lock_screen_show_current_summary">Отображать надписи заряд батареи на экране блокировки</string>
+    <string name="lock_screen_show_current">Заряд батареи </string>
+    <string name="lock_screen_show_current_summary">Отображать mA/h батареи на экране блокировки</string>
 
     <!-- Floating Windows -->
     <string name="shortcut_action_floating_windows">Плавающие окна</string>
@@ -807,7 +804,7 @@
     <string name="floating_windows">Плавающие окна</string>
     <string name="floating_windows_switch">Разрешать ли глобальное использование плавающего режима, если ни один из вариантов ниже не будет работать !!!</string>
     <string name="slim_action_floats">Slim и Pie</string>
-    <string name="slim_action_floats_summary">Выполнять действия узкой панели и Pie в режиме плавающего окна</string>
+    <string name="slim_action_floats_summary">Выполнять действия Slim и Pie панели в режиме плавающего окна</string>
     <string name="gesture_anywhere_floating">Жесты</string>
     <string name="gesture_anywhere_floating_summary">Использовать жесты в плавающем режиме</string>
 
