--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -28,11 +28,11 @@
     <string name="second_layout_title">第二个布局</string>
     <string name="third_layout_title">第三个布局</string>
     <string name="aicp_extras_title">AICP 设置</string>
-    <string name="pun_title">管理自己的ROM.皮卡丘</string>
+    <string name="pun_title">管理自己的ROM</string>
     <string name="various_shit_title">其他设置</string>
     <string name="about_title">关于</string>
     <string name="other_title">其他</string>
-    <string name="g_community">G+社区 (汉化作者：Pontifex.皮卡丘)</string>
+    <string name="g_community">G+社区</string>
     <string name="ui_title">界面</string>
     <string name="builtin_title">内置</string>
     <string name="addons_title">扩展</string>
@@ -48,8 +48,8 @@
     <string name="systemui_tuner_summary">棉花糖系统界面调整</string>
     <string name="systemui_tuner_dilog_title">注意</string>
     <string name="systemui_tuner_dilog_warning">“调谐器提供有限的系统界面修改。为了方便访问特将此选项加入到 AICP 设置。 在这里你可以添加或隐藏新图块。”</string>
-    <string name="aicp_downloads_title">下载地址 (欢迎加入AICP交流群)</string>
-    <string name="aicp_gerrit_title">代码审查 (群号：539345278)</string>
+    <string name="aicp_downloads_title">下载地址</string>
+    <string name="aicp_gerrit_title">代码审查</string>
     <string name="send_mail_intent">发送邮件...</string>
     <string name="hidden_anim_activity_title">休息时间!!!</string>
     <string name="hidden_anim_more_title">更多?</string>
@@ -322,7 +322,7 @@
     <string name="anonymous_statistics_title">AICP统计</string>
     <string name="anonymous_statistics_summary">帮助AICP选择为匿名统计报告</string>
     <string name="anonymous_statistics_warning_title">关于</string>
-    <string name="anonymous_statistics_warning">"选择加入AICP美国将允许非个人数据提交给我们的服务器。提交的信息包括唯一的标识符，它不会危及您的隐私和个人数据。该数据每7天提交。
+    <string name="anonymous_statistics_warning">"选择加入AICP将允许非个人数据提交给我们的服务器。提交的信息包括唯一的标识符，它不会危及您的隐私和个人数据。该数据每7天提交。
 
 对于已提交的数据的一个例子，点击预览数据。"</string>
     <string name="pref_settings">设置</string>
