AicpExtras:  press back twice to exit app
*this does not affect the naviation drawer, it still closes on first
 time

Change-Id: I8f7600abcadec84caae22b36e4ca03df36939615

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -842,4 +842,7 @@
     <string name="gesture_anywhere_floating">Gesture Anywhere</string>
     <string name="gesture_anywhere_floating_summary">Launch Gesture Anywhere shortcuts in float mode</string>
 
+    <!-- App Exit Toast -->
+    <string name="app_exit_toast">Press back again to exit</string>
+
 </resources>
