AicpExtras:  press back twice to exit app
*this does not affect the naviation drawer, it still closes on first
 time

Change-Id: I8f7600abcadec84caae22b36e4ca03df36939615

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -854,4 +854,8 @@
     <string name="qs_tile_animation_duration_superfast">SuperFast</string>
     <string name="qs_set_animation_style">Animation is set to %1$s</string>
     <string name="qs_set_animation_duration">Animation duration is set to %1$s</string>
+
+    <!-- App Exit Toast -->
+    <string name="app_exit_toast">Press back again to exit</string>
+
 </resources>
