--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -869,4 +869,10 @@
     <!-- App Exit Toast -->
     <string name="app_exit_toast">Press back again to exit</string>
 
+    <!-- Screenshot crop and share -->
+    <string name="screenshot_cat_title">Screenshot Options</string>
+    <string name="screenshot_crop_and_share_title">Screenshot crop &amp; share</string>
+    <string name="screenshot_crop_and_share_summary">Show an editor window after taking a screenshot in order to do some operations like cropping, saving or sharing it</string>
+    <string name="screenshot_crop_behavior_title">Crop mode</string>
+    <string name="screenshot_crop_behavior_summary">Always use the cropped image inside the cropping area, even if the apply button hasn\'t been pressed</string>
 </resources>
